    and icon/list modes.
19. Add a workaround for dockmanager issues - delay registration for .25secs.
20. Change default settings; use tree style for library, playlists, and streams.
21. Better playback button sizes.
22. Better height for collapsed interface.
23. Save/restore height of expanded interface, even when interface is
    collapsed.
24. Expand inerface when shoing error messages.

0.4.0
-----
 1. Transcode support when copying to devices.
 2. Don't allow editing of device properties when device is busy.
 3. Don't allow to change Music folder for UMS devices when properties dialog
    is shown from copy dialog.
 4. Use LibMTP to read device's serial number, and use this as the config key
    when saving properties to cantata's config file.
 5. Add option to cache contents of UMS library to an XML file on the device.
 6. Basic tag editing. (KDE only)
 7. Fix UMS and MTP song durations.
 8. Show file location in tooltips.
 9. Only save streams file if it has been modified.
10. Basic support for configurable stream/category icons. (KDE only)
11. Add track organiser dialog - so that files/folders can be renamed to match
    library/device scheme. (KDE only)
12. Unmaximise window when using compact interface.
13. When using local UNIX domain socket, allow playback of non database files.
    (This local UNIX only restriction comes from MPD)
14. Use KMessageWidget to show errors - copy of KDE code taken for pre KDE4.7
    and Qt only builds.
15. Fix updating of views when genre filter is changed.
16. Improve sidebar style context menu - icon only is a separate checkbox.
17. Improve look of play queue. Display 'play' icon next to current track.
18. Disable playback buttons depending upon size of play queue.
19. When sending track change notification, also include cover (if we have one)
20. Optionally fade-out track when stopping.
21. Add genre filtering to playlists and streams pages.
22. When pressing play after pressing stop, start playing at current song -