@@ -6,75 +6,91 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>341</width>
+    <height>270</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QFormLayout" name="formLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="margin">
     <number>0</number>
    </property>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_6">
-     <property name="text">
-      <string>Crossfading:</string>
+   <item>
+    <layout class="QFormLayout" name="formLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Crossfading:</string>
+       </property>
+       <property name="buddy">
+        <cstring>crossfading</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QSpinBox" name="crossfading">
+       <property name="suffix">
+        <string> seconds</string>
+       </property>
+       <property name="maximum">
+        <number>20</number>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_6a">
+       <property name="text">
+        <string>Replay gain:</string>
+       </property>
+       <property name="buddy">
+        <cstring>replayGain</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="replayGain"/>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_6b">
+       <property name="text">
+        <string>Fadeout on stop:</string>
+       </property>
+       <property name="buddy">
+        <cstring>stopFadeDuration</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QSpinBox" name="stopFadeDuration"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_6c">
+       <property name="text">
+        <string>Stop playback on exit:</string>
+       </property>
+       <property name="buddy">
+        <cstring>stopOnExit</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="stopOnExit"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Output</string>
      </property>
-     <property name="buddy">
-      <cstring>crossfading</cstring>
-     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QListWidget" name="view"/>
+      </item>
+     </layout>
     </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QSpinBox" name="crossfading">
-     <property name="suffix">
-      <string> seconds</string>
-     </property>
-     <property name="maximum">
-      <number>20</number>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_6a">
-     <property name="text">
-      <string>Replay gain:</string>
-     </property>
-     <property name="buddy">
-      <cstring>replayGain</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QComboBox" name="replayGain"/>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_6b">
-     <property name="text">
-      <string>Fadeout on stop:</string>
-     </property>
-     <property name="buddy">
-      <cstring>stopFadeDuration</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QSpinBox" name="stopFadeDuration"/>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_6c">
-     <property name="text">
-      <string>Stop playback on exit:</string>
-     </property>
-     <property name="buddy">
-      <cstring>stopOnExit</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QCheckBox" name="stopOnExit"/>
    </item>
   </layout>
  </widget>
